@@ -1,5 +1,8 @@
 2003-08-29  Matthias Clasen  <maclas@gmx.de>
 
+	* gtk/gtkactiongroup.c (gtk_action_group_add_radio_actions_full): Actually group the actions
+	together rather than putting each in its own group.
+
 	* gtk/gtkradioaction.c (create_menu_item): Set "draw_as_radio" on proxy menu items
 	for radio actions.
 
